display errors in editor and ace code

--- a/app/index.html
+++ b/app/index.html
@@ -61,10 +61,11 @@
     <script src="components/version/interpolate-filter.js"></script>
     <!--ace-ui-->
     <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
-    <script src="bower_components/angular-ui-ace/ui-ace.js"></script>
-    <script src="bower_components/ace-builds/src/ace.js"></script>
-    <script src="bower_components/ace-builds/src/ext-language_tools.js"></script>
     <script src="lib/n3-browser.js"></script>
+    <script src="lib/rdflib.js"></script>
+    <script src="bower_components/angular-ui-ace/ui-ace.js"></script>
+    <script src="ace/build/src/ace.js"></script>
+    <script src="ace/build/src/ext-language_tools.js"></script>
 </body>
 
 </html>
