--- a/app/view2/view2.html
+++ b/app/view2/view2.html
@@ -1,4 +1,4 @@
-<p>Help content goes here.</p>
+<p>Contact: <a href="mailto:hammadaslam.khan@external.engie.com">Hammad Aslam Khan</a></p>
 <p>
     Showing of 'interpolate' filter: {{ 'Current version is v%VERSION%.' | interpolate }}
 </p>
