--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -1,10 +1,15 @@
-<div class="col-md-9">
-    <div ui-ace="aceOption" ng-model="aceModel"></div>
-</div>
-<div class="col-md-3">
-    <h5 ng-show="urimessages.length > 0"><span class="glyphicon glyphicon-link"></span>&nbsp;IRI hints</h5>
-    <h6 ng-repeat="x in urimessages"><span class="glyphicon glyphicon-warning-sign"></span>&nbsp;{{x}}</h6>
-    <br/>
-    <h5 ng-show="statementmessages.length > 0">&nbsp;Triplets hints</h5>
-    <h6 ng-repeat="x in statementmessages"><span class="glyphicon glyphicon-link"></span>&nbsp;{{x}}</h6>
+<div class="row">
+    <div class="col-md-9">
+        <div ng-class="{aceeditormax: isFullScreen}" ui-ace="aceOption" ng-model="aceModel"></div>
+    </div>
+    <div class="col-md-3 warning">
+        <h5 ng-show="urimessages.length > 0"><span class="glyphicon glyphicon-link"></span>&nbsp;IRI hints</h5>
+        <h6 ng-repeat="x in urimessages"><span class="glyphicon glyphicon-warning-sign"></span>&nbsp;{{x}}</h6>
+        <br/>
+        <h5 ng-show="statementmessages.length > 0">&nbsp;Triplets hints</h5>
+        <h6 ng-repeat="x in statementmessages track by $index"><span class="glyphicon glyphicon-link"></span>&nbsp;{{x}}</h6>
+    </div>
+    <nav mfb-menu position="br" effect="slidein-spring" label="Options" active-icon="glyphicon glyphicon-chevron-down" resting-icon="glyphicon glyphicon-chevron-up" toggling-method="click">
+        <button mfb-button label="Maximize" ngsf-toggle-fullscreen ng-click="fullScreen()"></button>
+    </nav>
 </div>
