updated with prefix

--- a/app/index.html
+++ b/app/index.html
@@ -109,8 +109,8 @@
     <!--ace-ui-->
     <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
     <script src="bower_components/angular-ui-ace/ui-ace.js"></script>
-    <script src="ace/build/src/ace.js"></script>
-    <script src="ace/build/src/ext-language_tools.js"></script>
+    <script src="build/src/ace.js"></script>
+    <script src="build/src/ext-language_tools.js"></script>
 
     <!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>-->
 
