--- a/app/view2/view2.html
+++ b/app/view2/view2.html
@@ -1,4 +1,36 @@
-<p>Contact: <a href="mailto:hammadaslam.khan@external.engie.com">Hammad Aslam Khan</a></p>
-<p>
-    Showing of 'interpolate' filter: {{ 'Current version is v%VERSION%.' | interpolate }}
-</p>
+<div class="row">
+    <div class="col-md-12">
+        <h5>
+            RDF Turtle Editor checks conformance of RDF document with referenced ontologies together with RDF syntax validation using <a href=#>rdflib.js</a>.
+        </h5>
+        <h2>Features</h2>
+        <ul>
+            <li>RDF turtle syntax highlighting </li>
+            <li>Live RDF turtle syntax validation</li>
+            <li>Checks conformance of RDF document with Web of Data</li>
+            <li>Parses prefixed ontologies and adds as part of auto-completion</li>
+            <li>Makes newly defined terms in current document part of auto-completion</li>
+            <li>Parses prefixed ontologies in both rdf+xml and turtle format</li>
+            <li>...and many more</li>
+        </ul>
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-12">
+        <h2>Acknowledgements</h2>
+        <ul>
+            <li>Linkeddata team for <a href="https://github.com/linkeddata/rdflib.js">[rdflib.js]</a></li>
+            <li>Contributors behind <a href="https://github.com/ajaxorg/ace">[ace editor]</a> that rdfturtleditor uses to incorporate turtle format specifications</li>
+            <li><a href="http://prefix.cc/">[Prefix.cc]</a> that is used to fetch popular prefixes for prefix auto-completion</li>
+        </ul>
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-12">
+        <h2>In case help is needed!</h2>
+        <ul>
+            <li>Open issues on <a href="https://github.com/perfectkb/rdfturtleeditor/issues">GitHUB</a></li>
+            <li>Contact: <a href="mailto:hammadaslam.khan@external.engie.com">Hammad Aslam Khan</a></li>
+        </ul>
+    </div>
+</div>
