--- a/app/view2/view2.html
+++ b/app/view2/view2.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-md-12">
         <h5>
-            RDF Turtle Editor checks conformance of RDF document with referenced ontologies together with RDF syntax validation using <a href=#>rdflib.js</a>.
+            RDF Turtle Editor checks conformance of RDF document with referenced ontologies together with RDF syntax validation.
         </h5>
         <h2>Features</h2>
         <ul>
