added feature in Help section

--- a/app/view2/view2.html
+++ b/app/view2/view2.html
@@ -11,6 +11,7 @@
             <li>Parses prefixed ontologies and adds as part of auto-completion</li>
             <li>Makes newly defined terms in current document part of auto-completion</li>
             <li>Parses prefixed ontologies in both rdf+xml and turtle format</li>
+            <li>Hints role of a term in a triplet i.e. should it be a Predicate or a Concept</li>
             <li>...and many more</li>
         </ul>
     </div>
