added feature in Help section

--- a/app/view2/view2.html
+++ b/app/view2/view2.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-md-12">
         <h5>
-            RDF Turtle Editor checks conformance of RDF data with referenced web ontologies together with RDF syntax validation.
+            RDF Turtle Editor checks conformance of RDF data with referenced web ontologies together with RDF syntax and semantic validation.
         </h5>
         <h2>Features</h2>
         <ul>
@@ -11,7 +11,7 @@
             <li>Parses prefixed ontologies and adds as part of auto-completion</li>
             <li>Makes newly defined terms in current document part of auto-completion</li>
             <li>Parses prefixed ontologies in both rdf+xml and turtle format</li>
-            <li>Hints role of a term in a triplet i.e. should it be a Predicate or a Concept</li>
+            <li>Semantic validation of a term in a triplet i.e. should it be a Predicate or a Concept</li>
             <li>...and many more</li>
         </ul>
     </div>
